--- a/src/LogParser/LogParser.csproj
+++ b/src/LogParser/LogParser.csproj
@@ -9,5 +9,6 @@
 
   <ItemGroup>
     <PackageReference Include="YamlDotNet" Version="11.2.1" />
+    <PackageReference Include="System.CommandLine.DragonFruit" Version="0.4.0-alpha.22114.1" />
   </ItemGroup>
 </Project>
